force-app/main/default/objects/CRM_Survey__c/CRM_Survey__c.object-meta.xml
<CustomObject>
    <label>CRM Survey</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>CRM Survey #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CRM Survey</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>