force-app/main/default/objects/CRM_Survey__c/fields/Additional_features_released_Vs__c.field-meta.xml
<CustomField>
    <fullName>Additional_features_released_Vs__c</fullName>
    <label>Additional features released Vs needs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>