force-app/main/default/objects/CRM_Survey__c/fields/Availability_of_CRM_champions__c.field-meta.xml
<CustomField>
    <fullName>Availability_of_CRM_champions__c</fullName>
    <label>Availability of CRM champions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>