force-app/main/default/objects/CRM_Survey__c/fields/Biggest_pain_points_with_NAE_CRM_system__c.field-meta.xml
<CustomField>
    <fullName>Biggest_pain_points_with_NAE_CRM_system__c</fullName>
    <label>Biggest pain points with NAE CRM system</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>