force-app/main/default/objects/CRM_Survey__c/fields/Case_resolution_time__c.field-meta.xml
<CustomField>
    <fullName>Case_resolution_time__c</fullName>
    <label>Case resolution time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>