force-app/main/default/objects/CRM_Survey__c/fields/Communication_from_the_CRM_team__c.field-meta.xml
<CustomField>
    <fullName>Communication_from_the_CRM_team__c</fullName>
    <label>Communication from the CRM team</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>