force-app/main/default/objects/CRM_Survey__c/fields/CRM_helpful_with_Enquiry_to_FTE_Convert__c.field-meta.xml
<CustomField>
    <fullName>CRM_helpful_with_Enquiry_to_FTE_Convert__c</fullName>
    <label>CRM helpful with Enquiry to FTE Convert</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>