force-app/main/default/objects/CRM_Survey__c/fields/CRM_process_fitting_with_admissions__c.field-meta.xml
<CustomField>
    <fullName>CRM_process_fitting_with_admissions__c</fullName>
    <label>CRM process fitting with admissions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>