force-app/main/default/objects/CRM_Survey__c/fields/Current_reports_available__c.field-meta.xml
<CustomField>
    <fullName>Current_reports_available__c</fullName>
    <label>Current reports available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>