force-app/main/default/objects/CRM_Survey__c/fields/Data_migration_activities__c.field-meta.xml
<CustomField>
    <fullName>Data_migration_activities__c</fullName>
    <label>Data migration activities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>