force-app/main/default/objects/CRM_Survey__c/fields/Ease_of_use__c.field-meta.xml
<CustomField>
    <fullName>Ease_of_use__c</fullName>
    <label>Ease of use</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>