force-app/main/default/objects/CRM_Survey__c/fields/How_frequently_do_you_use_CRM__c.field-meta.xml
<CustomField>
    <fullName>How_frequently_do_you_use_CRM__c</fullName>
    <label>How frequently do you use CRM?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Multiple times a day</fullName>
            </value>
            <value>
                <fullName>Once per day</fullName>
            </value>
            <value>
                <fullName>Multiple times per week</fullName>
            </value>
            <value>
                <fullName>Once per week</fullName>
            </value>
            <value>
                <fullName>Less than once per week</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>