force-app/main/default/objects/CRM_Survey__c/fields/How_long_have_you_been_using_CRM_at_NAE__c.field-meta.xml
<CustomField>
    <fullName>How_long_have_you_been_using_CRM_at_NAE__c</fullName>
    <label>How long have you been using CRM at NAE?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-6 months</fullName>
            </value>
            <value>
                <fullName>7-12 months</fullName>
            </value>
            <value>
                <fullName>13-24 months</fullName>
            </value>
            <value>
                <fullName>25+ months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>