force-app/main/default/objects/CRM_Survey__c/fields/Integration_with_iSAMS_process__c.field-meta.xml
<CustomField>
    <fullName>Integration_with_iSAMS_process__c</fullName>
    <label>Integration with iSAMS process</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>