force-app/main/default/objects/CRM_Survey__c/fields/Online_application_forms_transition__c.field-meta.xml
<CustomField>
    <fullName>Online_application_forms_transition__c</fullName>
    <label>Online application forms transition</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>