force-app/main/default/objects/CRM_Survey__c/fields/Overall_Satisfaction_with_CRM__c.field-meta.xml
<CustomField>
    <fullName>Overall_Satisfaction_with_CRM__c</fullName>
    <label>Overall Satisfaction with CRM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>