force-app/main/default/objects/CRM_Survey__c/fields/Support_from_the_Regional_Team__c.field-meta.xml
<CustomField>
    <fullName>Support_from_the_Regional_Team__c</fullName>
    <label>Support from the Regional Team</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>