force-app/main/default/objects/CRM_Survey__c/fields/Time_saved_on_admin_work__c.field-meta.xml
<CustomField>
    <fullName>Time_saved_on_admin_work__c</fullName>
    <label>Time saved on admin work</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>