force-app/main/default/objects/CRM_Survey__c/fields/Training_provided_during_go_live_week__c.field-meta.xml
<CustomField>
    <fullName>Training_provided_during_go_live_week__c</fullName>
    <label>Training provided during &quot;go live week&quot;</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>