force-app/main/default/objects/CRM_Survey__c/fields/Visibility_of_admissions_pipeline__c.field-meta.xml
<CustomField>
    <fullName>Visibility_of_admissions_pipeline__c</fullName>
    <label>Visibility of admissions pipeline</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>