force-app/main/default/objects/CRM_Survey__c/fields/What_are_the_features_you_would_want__c.field-meta.xml
<CustomField>
    <fullName>What_are_the_features_you_would_want__c</fullName>
    <label>What are the features you would want?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>