force-app/main/default/objects/CRM_Survey__c/fields/What_you_like_most_about_NAE_CRM_System__c.field-meta.xml
<CustomField>
    <fullName>What_you_like_most_about_NAE_CRM_System__c</fullName>
    <label>What you like most about NAE CRM System</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>