force-app/main/default/objects/CRM_Survey__c/fields/Where_do_you_work__c.field-meta.xml
<CustomField>
    <fullName>Where_do_you_work__c</fullName>
    <label>Where do you work?</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>The Americas</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>China International</fullName>
            </value>
            <value>
                <fullName>China Bilingual</fullName>
            </value>
            <value>
                <fullName>Southeast Asia</fullName>
            </value>
            <value>
                <fullName>Middle East</fullName>
            </value>
            <value>
                <fullName>Central Team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>