force-app/main/default/objects/CRM_Survey__c/fields/Which_school_do_you_work_in__c.field-meta.xml
<CustomField>
    <fullName>Which_school_do_you_work_in__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Which school do you work in?</label>
    <referenceTo>School__c</referenceTo>
    <relationshipLabel>CRM Survey</relationshipLabel>
    <relationshipName>CRM_Survey</relationshipName>
    <type>Lookup</type>
</CustomField>